--- a/index.html
+++ b/index.html
@@ -1360,10 +1360,11 @@
         <div class="header-content">
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
 			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
-   width="255"
-   height="36"
-   viewBox="0 0 97.895836 17.197918"
+   width="125"
+   height="42"
+   viewBox="0 0 33.072918 11.112502"
    version="1.1"
    id="svg1031"
    inkscape:version="1.2.2 (732a01da63, 2022-12-09)"
@@ -1385,15 +1386,15 @@
      inkscape:pagecheckerboard="0"
      inkscape:deskcolor="#505050"
      showgrid="false"
-     inkscape:zoom="0.548125"
-     inkscape:cx="807.2976"
-     inkscape:cy="-38.312429"
+     inkscape:zoom="4"
+     inkscape:cx="145.625"
+     inkscape:cy="54.75"
      inkscape:window-width="1920"
      inkscape:window-height="1057"
      inkscape:window-x="1912"
      inkscape:window-y="-8"
      inkscape:window-maximized="1"
-     inkscape:current-layer="layer1" />
+     inkscape:current-layer="g412" />
   <defs
      id="defs1028" />
   <g
@@ -1402,10 +1403,10 @@
      id="layer1">
     <g
        id="g412"
-       transform="matrix(0.25608957,0,0,0.25608957,1.303149,1.4346668)">
+       transform="matrix(0.17926271,0,0,0.17926271,0.90856409,1.5828311)">
       <g
          id="g209648-7-6-69-0-7"
-         transform="matrix(1.7939527,0,0,1.6303885,-100.94944,-127.85386)"
+         transform="matrix(2.1537652,0,0,1.957395,-127.45201,-162.74002)"
          style="fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:0.227974;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
          inkscape:export-filename="C:\Users\alexi\OneDrive\Documents\-=Рабочие документы=-\MY SITE\AR Logo\g209648-7-6-69-0-7.png"
          inkscape:export-xdpi="96"
@@ -1451,18 +1452,30 @@
       </g>
       <text
          xml:space="preserve"
-         style="font-weight:bold;font-size:32.4556px;font-family:Arial;-inkscape-font-specification:'Arial, Bold';fill:#ffffff;stroke-width:0.105833"
-         x="52.494301"
-         y="47.184532"
+         style="font-weight:bold;font-size:28.8493px;font-family:Arial;-inkscape-font-specification:'Arial, Bold';fill:#ffffff;stroke-width:0.0940738"
+         x="46.20026"
+         y="30.676462"
          id="text296"><tspan
            sodipodi:role="line"
            id="tspan294"
-           style="stroke-width:0.105833"
-           x="52.494301"
-           y="47.184532">Информаторий v2.5</tspan></text>
+           style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:20.9913px;font-family:Arial;-inkscape-font-specification:'Arial, Bold';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;stroke-width:0.0940738"
+           x="46.20026"
+           y="30.676462">InfoTech v2.5</tspan></text>
+      <text
+         xml:space="preserve"
+         style="font-weight:bold;font-size:181.051px;font-family:Arial;-inkscape-font-specification:'Arial, Bold';fill:#ffffff;stroke-width:0.59038"
+         x="265.29196"
+         y="45.698128"
+         id="text446"><tspan
+           sodipodi:role="line"
+           id="tspan444"
+           style="stroke-width:0.59038"
+           x="265.29196"
+           y="45.698128"> </tspan></text>
     </g>
   </g>
 </svg>
+
 
             <h1><span>Справочник светотехника v2.5</span></h1>
             <div class="controls">
@@ -6053,6 +6066,7 @@ function toggleCollapsible(element) {
 </body>
 
 </html>
+
 
 
 
