--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@
 </svg>
 
 
-            <h1><span>Справочник светотехника v2.5</span></h1>
+            <h1><span>Справочник светотехника</span></h1>
             <div class="controls">
                 <div class="search-container">
                     <input type="text" id="searchInput" placeholder="Поиск..." autocomplete="off">
@@ -6066,6 +6066,7 @@ function toggleCollapsible(element) {
 </body>
 
 </html>
+
 
 
 
