--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Профессиональный справочник техника по концертному свету. DMX протоколы, световое оборудование, риггинг, спецэффекты.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Профессиональный справочник светотехника</title>
+    <title>Справочник светотехника</title>
     <style>
         :root {
             --primary-color: #2563eb;
@@ -6066,6 +6066,7 @@ function toggleCollapsible(element) {
 </body>
 
 </html>
+
 
 
 
