--- a/index.html
+++ b/index.html
@@ -6,45 +6,54 @@
   <title>Календарь — без прокрутки, адаптивно</title>
   <style>
     :root {
-      --vh: 1vh;     /* JS-фоллбэк: 1% реальной высоты окна */
-      --vwpx: 100vw; /* будет заменено JS на точные px */
-      /* Опорная «логическая» ширина, от которой считаем масштаб.
-         Для месячного вида комфортно 980–1200px; возьмём 1024. */
+      /* JS-фоллбэк: 1% реальной высоты окна, будет заменён JS */
+      --vh: 1vh; /* корректирует «100vh-баг» на мобайле */ /* [web:10] */
+      /* Точный viewport width в px для масштабирования логической ширины */
+      --vwpx: 100vw; /* будет заменено JS на window.innerWidth */ /* [web:10] */
+      /* Опорная «логическая» ширина макета для масштабирования */
       --base-width: 1024;
       --bg: #0b0c0f;
     }
 
     html, body {
-      height: 100%;
+      height: 100%; /* совместимость с моб. браузерами и вложенными 100% */ /* [web:5] */
       margin: 0;
       background: var(--bg);
       -webkit-tap-highlight-color: transparent;
       overscroll-behavior: none;
     }
 
-    /* Область отображения — на весь экран, без рамок/футера */
+    /* Область приложения — заполняет весь видимый экран, без внешней прокрутки */
     .app {
-      height: 100dvh;                 /* основная единица */
-      height: calc(var(--vh) * 100);  /* фоллбэк */
+      /* Новый стандартный путь: динамическая высота */
+      height: 100dvh; /* учитывает панель адреса при сворачивании/разворачивании */ /* [web:21] */
+      /* Фоллбэк для браузеров без dvh: точная высота по innerHeight */
+      height: calc(var(--vh) * 100); /* устойчивая высота «как видно на экране» */ /* [web:7] */
       width: 100%;
+
+      /* Учёт вырезов/чёлок; в портрете может быть 0px — это норма */
       padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px)
-               env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
+               env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px); /* [web:22] */
+
       box-sizing: border-box;
       display: grid;
       place-items: center;
       background: #0f1117;
+      overflow: hidden; /* исключаем прокрутку корневой обёртки */ /* [web:10] */
     }
 
-    /* Логические размеры до масштабирования */
+    /* Логическая сцена до масштабирования */
     .scaled-wrap {
       position: relative;
       width: calc(var(--base-width) * 1px);
-      height: calc(var(--vh) * 100);
-      height: 100dvh;
+      /* Высота сцены равна видимой высоте экрана */
+      height: 100dvh; /* основной путь */ /* [web:21] */
+      height: calc(var(--vh) * 100); /* фоллбэк через JS-переменную */ /* [web:10] */
+
       overflow: clip;
       transform-origin: top left;
 
-      /* Масштаб: min(1, viewportWidth / baseWidth) */
+      /* Масштаб по ширине: min(1, viewportWidth / baseWidth) */
       --scale: min(1, calc(var(--vwpx) / (var(--base-width) * 1)));
       transform: scale(var(--scale));
     }
@@ -67,38 +76,55 @@
       overscroll-behavior: contain;
     }
 
-    /* Портрет: обязательно занимать весь экран */
+    /* Портрет: заполняем весь экран (повтор высоты для надёжности) */
     @media screen and (orientation: portrait) {
-      .app { height: 100dvh; height: calc(var(--vh) * 100); }
+      .app { height: 100dvh; height: calc(var(--vh) * 100); } /* [web:21] */
+      .scaled-wrap { height: 100dvh; height: calc(var(--vh) * 100); } /* [web:10] */
     }
 
-    /* Десктоп/ландшафт: без масштабирования или с мягким ограничением */
+    /* Десктоп/ландшафт: можно ограничить высоту, если нужно */
     @media (min-width: 1024px) and (orientation: landscape) {
       .scaled-wrap {
         --scale: 1;
-        height: min(85vh, 900px);
-        height: min(85dvh, 900px);
+        height: min(85dvh, 900px); /* «мягкое» ограничение на больших экранах */ /* [web:21] */
+        height: min(calc(var(--vh) * 85), 900px); /* фоллбэк */ /* [web:10] */
       }
     }
+
+    /* Прогрессивное улучшение для старых iOS WebKit: */
+    @supports (-webkit-touch-callout: none) {
+      /* Можно подсобить телу избегать «лишней» прокрутки в ряде случаев */
+      body { min-height: 100%; } /* помогает с jumpy layout у части устройств */ /* [web:7] */
+    }
   </style>
+
   <script>
     // Устанавливаем точные переменные для устойчивого масштаба/высоты
     (function() {
       function setViewportVars() {
-        var vh = window.innerHeight * 0.01;
-        var vw = window.innerWidth; // точная ширина в px
-        document.documentElement.style.setProperty('--vh', vh + 'px');
-        document.documentElement.style.setProperty('--vwpx', vw);
+        // 1% от видимой высоты окна
+        var vh = window.innerHeight * 0.01; // учитывает адресные панели динамически /* [web:10] */
+        // Точная ширина окна для масштабирования макета
+        var vw = window.innerWidth; /* [web:10] */
+
+        var root = document.documentElement;
+        root.style.setProperty('--vh', vh + 'px');
+        root.style.setProperty('--vwpx', vw);
       }
-      setViewportVars();
-      window.addEventListener('resize', setViewportVars, { passive: true });
-      window.addEventListener('orientationchange', setViewportVars, { passive: true });
+
+      // Инициализация и реакция на изменения
+      setViewportVars(); // при загрузке /* [web:10] */
+      window.addEventListener('resize', setViewportVars, { passive: true }); // при ресайзе/rotation /* [web:13] */
+      window.addEventListener('orientationchange', setViewportVars, { passive: true }); // смена ориентации /* [web:13] }
+
+      // iOS Safari иногда меняет доступную высоту при появлении клавиатуры/панелей —
+      // можно дополнительно слушать события фокуса/blur при необходимости.
     })();
   </script>
 </head>
 <body>
   <div class="app" role="application" aria-label="Календарь — все элементы помещаются на экране">
-    <div class="scaled-wrap">
+    <div class="scaled-wrap" aria-hidden="false">
       <div class="calendar">
         <iframe
           src="https://calendar.yandex.ru/embed/month?private_token=60dc2986fd011ad112334068ba1429c715c3c6df&tz_id=Europe/Moscow"
